tests/negative/traits/invoke-dyn-method-not-found.orng
trait My_Trait { }

impl My_Trait for Int { }

fn main() -> Int {
    let x: Int = 4
    f(&x)
}

fn f(x: &dyn My_Trait) -> Int {
    x.>get_int()
}